--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="nav-items">
                     <div><a href="#projects">Projects</a></div>
                     <div><a href="#skills">Skills</a></div>
-                    <div><a href="#contactme">Contact Me</a></div>
+                    <div><a href="#contactme">Contact-`Me</a></div>
                 </div>
 
             </div>
